# CW7_DRF

./: .env.example.docker  .env.sample  .env_  Dockerfile  README.md  all.json  coverage.txt  docker-compose.yaml  manage.py  pyproject.toml
config/: settings.py  urls.py
habits/: admin.py  apps.py  models.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0004_rename_time_habit_time_at.py
habits/migrations/Папка/: 0002_initial.py  0003_alter_habit_table.py  0005_rename_time_at_habit_time.py  0006_alter_habit_associated_habit.py  0007_remove_habit_is_public_habit_is_public_habit_and_more.py  0008_alter_habit_time.py  0009_alter_habit_time.py  0010_alter_habit_time.py  0011_remove_habit_time.py
users/: admin.py  models.py  permissions.py  urls.py  views.py
users/migrations/: 0003_remove_user_tg_chat_id_user_telegram_id.py
users/migrations/Папка/: 0001_initial.py  0002_alter_user_table.py
